# bionitio

./: .travis.yml  LICENSE  README.md
.travis/: cpp-install-dependencies.sh  install-dependencies.sh  java-install-dependencies.sh  python-install-dependencies.sh  test-all.sh  test-haskell.sh  test-java.sh  test-python.sh  test.sh
.travis/install-depdendencies/: js-install-dependencies.sh
.travis/install-dependencies/: haskell-install-dependencies.sh  java-install-dependencies.sh  python-install-dependencies.sh  r-install-dependencies.sh
bash/: bionitio.sh  biotool.sh
boot/: Dockerfile  bionitio-boot-test.sh  bionitio-boot.sh  biotool-boot.sh
c/: .travis.yml  Makefile  README.md
c/.travis/: install-dependencies.sh  unit-test.sh
c/src/: bionitio.c  biotool.c  fasta.c  fasta.h  kseq.h  log.c  log.h  test.c
clojure/: .travis.yml  CHANGELOG.md  LICENSE  README.md  project.clj
clojure/.travis/: install-dependencies.sh
clojure/biotool/: README.md
clojure/biotool/doc/: intro.md
clojure/biotool/src/biotool/: core.clj
clojure/biotool/test/biotool/: core_test.clj
clojure/src/bionitio/: core.clj
clojure/src/biotool/: core.clj
clojure/test/bionitio/: core_test.clj
clojure/test/biotool/: core_test.clj
clone/: bionitio-clone.sh
cpp/: .gitignore  .travis.yml  CMakeLists.txt  README.md  biotool.cpp  constants.h  error.cpp  error.h  exit_status.h  fasta_stats.cpp  fasta_stats.h  options.cpp  options.h  test.cpp
cpp/.travis/: install-dependencies.sh
cpp/src/: CMakeLists.txt  bionitio.cpp  biotool.cpp  constants.h  error.cpp  error.h  exit_status.h  fasta_stats.cpp  fasta_stats.h  options.cpp  options.h  test.cpp
csharp/: .gitignore  FastaStats.cs  Program.cs  csharp.csproj  csharp.sln  simple.fasta
csharp/.travis/: install-dependencies.sh  unit-test.sh
csharp/bionitio/: Exception.cs  FastaStats.cs  Program.cs  bionitio.csproj
csharp/test/: Tests.cs  UnitTest1.cs  test.csproj
githelper/: bionitio-git.sh
haskell/: .travis.yml  LICENSE  README.md  biotool-hs.cabal
haskell/.travis/: install-dependencies.sh  unit-test.sh
haskell/app/: Main.hs
haskell/src/: Main.hs  Stats.hs
haskell/test/: Test.hs
java/: .travis.yml  LICENSE  README.md  bionitio-java  biotool-java  biotool.bash
java/.travis/: install-dependencies.sh  unit-test.sh
java/bionitio/: pom.xml
java/bionitio/src/main/java/org/supernifty/bionitio/: App.java  FastaException.java  FastaStats.java  Logger.java  package-info.java
java/bionitio/src/test/java/org/supernifty/bionitio/: AppTest.java  FastaStatsTest.java
java/biotool/: pom.xml
java/biotool/src/main/java/org/supernifty/biotool/: App.java  FastaException.java  FastaStats.java  Logger.java  package-info.java
java/biotool/src/test/java/org/supernifty/: AppTest.java
java/biotool/src/test/java/org/supernifty/biotool/: AppTest.java  FastaStatsTest.java
js/: .travis.yml  README.md  bionitio.js  biotool.js  package.json
js/.travis/: install-dependencies.sh
js/lib/: fasta-parser.js  fasta-stats.js
js/test/: test.js
license_options/: Apache-2.0  BSD-2-Clause  BSD-3-Clause  GPL-2.0  MIT
perl5/: .travis.yml  README.md  bionitio.pl  bionitio_test.pl  biotool.pl  biotool_test.pl
perl5/.travis/: install-dependencies.sh  unit-test.sh
python/: .travis.yml  README.md  biotool.py  setup.py
python/.travis/: install-dependencies.sh  unit-test.sh
python/bionitio/: bionitio.py  bionitio_test.py
python/biotool/: biotool.py  biotool_test.py  version.py
r/: .travis.yml  README.md  bionitio.R  biotool.R
r/.travis/: install-dependencies.sh
r/bionitio/: DESCRIPTION  LICENSE  NAMESPACE
r/bionitio/R/: bionitio.R
r/bionitio/inst/extdata/: two_sequence.fasta
r/bionitio/man/: get_seq_stats.Rd  load_fasta_file.Rd  pretty_output.Rd  run_bionitio.Rd
r/bionitio/tests/: testthat.R
r/bionitio/tests/testthat/: test-file_utils.R  test-pretty.R  test-read_file.R  test-run_bionitio.R  test-stats.R
r/biotool/: DESCRIPTION  NAMESPACE
r/biotool/R/: biotool.R  file_utils.R
r/biotool/man/: get_seq_stats.Rd  load_fasta_file.Rd  pretty_output.Rd  run_biotool.Rd
r/biotool/tests/: testthat.R
r/biotool/tests/testthat/: test-file_utils.R  test-read_file.R  test-run_biotool.R  test_stats.R
readme-template/: README.md  bionitio-readme.sh
readme_template/: README.md  TEMPLATE.md
ruby/: .gitignore  .travis.yml  Gemfile  README.md  bionitio.gemspec  biotool.gemspec  biotool.rb
ruby/.travis/: install-dependencies.sh  unit-test.sh
ruby/lib/: bionitio.rb  biotool.rb
ruby/lib/bionitio/: version.rb
ruby/lib/biotool/: version.rb
ruby/test/: test_bionitio.rb  test_biotool.rb
rust/: .travis.yml  Cargo.toml  README.md
rust/.travis/: install-dependencies.sh  unit-test.sh
rust/src/: main.rs
test_data/: no_header  one_sequence.fasta
