name:                biotool-hs
version:             0.1.0.0
synopsis:            Demonstration bioinformatics tool 
description:         The program reads one or more input FASTA files. For
                     each file it computes a variety of statistics, and then
                     prints a summary of the statistics as output. 
homepage:            https://github.com/bjpop/biotool
license:             MIT 
license-file:        LICENSE
author:              Bernie Pope 
maintainer:          bjpope@unimelb.edu.au
copyright:           2016 Bernie Pope 
category:            Bioinformatics 
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src 
  exposed-modules:     Stats 
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , biofasta
  default-language:    Haskell2010

executable biotool-hs
  hs-source-dirs:      src 
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , biofasta
                     , optparse-applicative
                     , biotool-hs
                     , hslogger 
  default-language:    Haskell2010

test-suite biotool-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test 
  main-is:             Test.hs
  build-depends:       base
                     , biotool-hs
                     , hspec
                     , biofasta
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bjpop/biotool
